--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,14 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <title>Keith Lavoie's Portfolio</title>
+<script>
+document.body.classList.add('js-loading');
 
+  window.addEventListener("load", showPage);
+  
+  function showPage() {
+    document.body.classList.remove('js-loading');
+  }</script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
