--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,15 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <title>Keith Lavoie's Portfolio</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-X53YJ40H25"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-X53YJ40H25');
+</script>
 <script>
 document.body.classList.add('js-loading');
 
